fix(running in server)